--- a/프로젝트(Top Folder)/Code-Folder-FirstSpringBoot/core/build.gradle
+++ b/프로젝트(Top Folder)/Code-Folder-FirstSpringBoot/core/build.gradle
@@ -23,6 +23,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// DL javax 추가
+	implementation 'javax.inject:javax.inject:1'
+
 	//lombok 라이브러리 추가 시작
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
