--- a/프로젝트(Top Folder)/Code-Folder-FirstSpringBoot/core/build.gradle
+++ b/프로젝트(Top Folder)/Code-Folder-FirstSpringBoot/core/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 	// DL javax 추가
 	implementation 'javax.inject:javax.inject:1'
 
+	// Web 환경 추가
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
 	//lombok 라이브러리 추가 시작
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
